# jordanmorgan-portfolio-public

./: Dockerfile  Justfile  Makefile  README.md  pyproject.toml  pytest.ini
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/website/: db.sqlite3
src/website/chatbot/: urls.py  views.py
src/website/main/: urls.py  views.py
src/website/main/static/main/assets/css/: main.css
src/website/main/templates/main/: chatbot.html  index.html
src/website/mcp_server/: server.py
src/website/mcp_server/tools/: __init__.py  hello_world.py
src/website/staticfiles/main/assets/css/: main.css
src/website/website/: asgi.py  settings.py  urls.py
tests/: test_endpoints.py
